Hello world site

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Thomas Falconer</title>
 </head>
 
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>This is my minimal GitHub Pages site.</p>
+    <h1>Thomas Falconer</h1>
+    <p>Site under construction.</p>
 </body>
 
 </html>
