Start building minimal site

--- a/index.html
+++ b/index.html
@@ -4,12 +4,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thomas Falconer</title>
+    <title>Thomas D. Falconer</title>
 </head>
 
 <body>
-    <h1>Thomas Falconer</h1>
-    <p>Site under construction.</p>
+    <h1>Hi there 👋, I'm Thomas Falconer</h1>
+
+    <img src="/profile_pic.jpg" width="200" height="auto" alt="profile_pic.jpg" align="left"
+        style="margin-right: 15px;">
+
+
+    <p>I am a Ph.D. candidate at <a href="https://https://www.dtu.dk/">Danmarks Tekniske Universitet</a> (DTU) within
+        the <a href="https://orbit.dtu.dk/en/organisations/energy-analytics-and-markets">Energy Markets and
+            Analytics</a> section, at the Department of Wind and Energy Systems, <a
+            href="https://www.cee.elektro.dtu.dk/">Center for Electric
+            Power and Energy</a> (supervised by Dr. <a href="https://www.jalalkazempour.com/">Jalal Kazempour</a> and
+        Dr. <a href="https://pierrepinson.com/">Pierre Pinson</a>).
+    </p>
+
+    <p>My research interests include mechanism design and the economics of data.
+        This generally inolves problems at the intersection of machine learning, optimization and game theory.</p>
+
+    <p>I hold an M.Sc. in Data Science and Energy Systems from
+        <a href="https://www.ucl.ac.uk/">University College London</a>
+        (<a href="https://www.ucl.ac.uk/bartlett/energy/research/energy-systems-and-artificial-intelligence-lab">Energy
+            and Artifical Intelligence Lab</a>),
+        where I wrote my <a href="https://ieeexplore.ieee.org/document/9810496" target=>thesis</a> in collaboration with
+        <a href="https://www.invenia.ca/labs/">Invenia Labs</a>, supervised by Dr. <a
+            href="https://www.letifmones.com/">Letif Mones</a>.
+    </p>
+
+    <p>Before starting my Ph.D., I worked within the Data Science team at <a href="https://www.arenko.group/">Arenko
+            Group</a>
+        developing probabilistic models to forecast wholesale electricity prices and to optimize trading
+        decisions for flexible assets.</p>
+
+
+    <div class="news">
+        <h2>News</h2>
+        <div class="table-responsive">
+            <table class="table table-sm table-borderless">
+                <tr>
+                    <th scope="row">Jun 22, 2022</th>
+                    <td>
+                        Accepted! Our paper T. Falconer and L. Mones, “Leveraging power grid topology in machine
+                        learning assisted optimal power flow” has been accepted for publication in the IEEE Transactions
+                        on Power Systems.
+
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">May 15, 2022</th>
+                    <td>
+                        Moved to København to begin a Ph.D. at Danmarks Tekniske Universitet. <img class="emoji"
+                            title=":books:" alt=":books:"
+                            src="https://github.githubassets.com/images/icons/emoji/unicode/1f4da.png" height="20"
+                            width="20">
+
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+    <h2>Research</h2>
+    <h2>Learning</h2>
+    <h2>Blog</h2>
+    <h2>Kernel Papers</h2>
+
+
 </body>
 
 </html>
