Fix invenia link

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Hi there 👋, I'm Thomas Falconer</h1>
 
-    <img src="/profile_pic.jpg" width="200" height="auto" alt="profile_pic.jpg" align="left"
-        style="margin-right: 15px;">
+    <img src="/profile_pic.jpg" width="250" height="auto" alt="profile_pic.jpg" align="left"
+        style="margin-left: 20px;margin-right: 20px;">
 
 
     <p>I am a Ph.D. candidate at <a href="https://https://www.dtu.dk/">Danmarks Tekniske Universitet</a> (DTU) within
@@ -30,7 +30,7 @@
         (<a href="https://www.ucl.ac.uk/bartlett/energy/research/energy-systems-and-artificial-intelligence-lab">Energy
             and Artifical Intelligence Lab</a>),
         where I wrote my <a href="https://ieeexplore.ieee.org/document/9810496" target=>thesis</a> in collaboration with
-        <a href="https://www.invenia.ca/labs/">Invenia Labs</a>, supervised by Dr. <a
+        <a href="https://uk.linkedin.com/company/invenia-labs">Invenia Labs</a>, supervised by Dr. <a
             href="https://www.letifmones.com/">Letif Mones</a>.
     </p>
 
