--- a/common.html
+++ b/common.html
@@ -1,38 +1,56 @@
-<div>
+<!DOCTYPE html>
+<html>
 
-    <h1>Hi there 👋, I'm Thomas Falconer</h1>
+<body>
+    <h1>Hi there 👋, I'm Thomas Falconer...</h1>
 
-    <img src="/profile_pic.jpg" width="250" height="auto" alt="profile_pic.jpg" align="left"
+    <img src="/profile_pic.jpg" width="120" height="auto" alt="profile_pic.jpg" align="left"
         style="margin-left: 20px;margin-right: 20px;">
 
-
-    <p>I am a Ph.D. candidate at <a href="https://https://www.dtu.dk/">Danmarks Tekniske Universitet</a> (DTU) within
-        the <a href="https://orbit.dtu.dk/en/organisations/energy-analytics-and-markets">Energy Markets and
-            Analytics</a> section, at the Department of Wind and Energy Systems, <a
-            href="https://www.cee.elektro.dtu.dk/">Center for Electric
-            Power and Energy</a> (supervised by Dr. <a href="https://www.jalalkazempour.com/">Jalal Kazempour</a> and
-        Dr. <a href="https://pierrepinson.com/">Pierre Pinson</a>).
+    <p>I am a Ph.D. candidate at the <a href="https://https://www.dtu.dk/">Technical University of Denmark
+        </a>
+        (DTU) within
+        the <a href="https://orbit.dtu.dk/en/organisations/energy-analytics-and-markets">Energy Markets
+            and
+            Analytics</a> section, supervised by Prof. <a href="https://www.jalalkazempour.com/">Jalal
+            Kazempour</a> (DTU) and
+        Prof. <a href="https://pierrepinson.com/">Pierre Pinson</a> (Imperial College London).
     </p>
 
-    <p>My research interests include mechanism design and the economics of data.
-        This generally inolves problems at the intersection of machine learning, optimization and game theory.</p>
+    <p>My research interests include mechanism design, forecasting and the economics of data.
+        This generally inolves problems at the intersection of machine learning, optimization and game
+        theory.</p>
 
     <p>I hold an M.Sc. in Data Science and Energy Systems from
         <a href="https://www.ucl.ac.uk/">University College London</a>
         (<a href="https://www.ucl.ac.uk/bartlett/energy/research/energy-systems-and-artificial-intelligence-lab">Energy
             and Artifical Intelligence Lab</a>),
-        where I wrote my <a href="https://ieeexplore.ieee.org/document/9810496" target=>thesis</a> in collaboration with
+        where I wrote my <a href="https://ieeexplore.ieee.org/document/9810496" target=>thesis</a> in
+        collaboration with
         <a href="https://uk.linkedin.com/company/invenia-labs">Invenia Labs</a>, supervised by Dr. <a
             href="https://www.letifmones.com/">Letif Mones</a>.
     </p>
 
     <p>Before starting my Ph.D., I worked within the Data Science team at <a href="https://www.arenko.group/">Arenko
             Group</a>
-        developing probabilistic models to forecast wholesale electricity prices and to optimize trading
-        decisions for flexible assets.</p>
+        developing probabilistic models to forecast wholesale electricity prices and optimization algorthims
+        to trade flexible assets (e.g., batteries).</p>
 
-    <!-- <a class="nav-link" href="/research/">Research</a>
+    <a class="nav-link" href="/research/">Research</a>
+    <a class="nav-link" href="/blog/">Blog</a>
     <a class="nav-link" href="/learning/">Learning</a>
-    <a class="nav-link" href="/writing/">Blog</a> -->
 
-</div>
+    <!-- <table style="width:40%; height:auto;">
+        <tr>
+            <td>
+
+                
+
+
+            </td>
+        </tr>
+    </table> -->
+
+</body>
+
+</html>
