--- a/research/index.html
+++ b/research/index.html
@@ -9,40 +9,134 @@
 
 <body>
 
-    <iframe src="../common.html" style="border:none; width:100%; height:400px;"></iframe>
+    <div id="common-content"></div>
+
+    <script>
+        fetch('../common.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('common-content').innerHTML = data;
+            });
+    </script>
 
 
 
-    <h1>Research</h1>
+    <table style="width:100%; height:auto;">
+        <tr>
+            <td>
+                <h1>Research</h1>
 
-    <h2>Mechanism Design for Trading Information</h2>
+                <h2>Mechanism Design for Trading Information</h2>
 
-    <p>Falconer, T., Kazempour, J., & Pinson, P. (2024). <i>Trading Information in Games</i>. arXiv Preprint
-        (Under Review).</p>
+                Machine learning assisted optimal power flow (OPF)
+                aims to reduce the computational complexity of these non-linear
+                and non-convex constrained optimization problems by consigning
+                expensive (online) optimization to offline training. The majority of
+                work in this area typically employs fully connected neural networks
+                (FCNN). However, recently convolutional (CNN) and graph (GNN)
+                neural networks have also been investigated, in effort to exploit
+                topological information within the power grid. Although promising
+                results have been obtained, there lacks a systematic comparison
+                between these architectures throughout literature. Accordingly,
+                we introduce a concise framework for generalizing methods for
+                machine learning assisted OPF and assess the performance of a
+                variety of FCNN, CNN and GNN models for two fundamental
+                approaches in this domain: regression (predicting optimal generator set-points) and classification
+                (predicting the active set of
+                constraints). For several synthetic power grids with interconnected
+                utilities, we show that locality properties between feature and target
+                variables are scarce and subsequently demonstrate marginal utility
+                of applying CNN and GNN architectures compared to FCNN for a
+                fixed grid topology. However, with variable topology (for instance,
+                modeling transmission line contingency), GNN models are able to
+                straightforwardly take the change of topological information into
+                account and outperform both FCNN and CNN models.
 
-    <h2>Collaborative Machine Learning</h2>
+                <h3>Article(s)</h3>
 
-    <h3>Article(s)</h3>
+                <p>Falconer, T., Kazempour, J., & Pinson, P. (2024). <i>Trading Information in Games</i>. arXiv Preprint
+                    (Under Review).</p>
 
-    <p><a href="https://www.jmlr.org/papers/v25/23-1385.html">Falconer, T., Kazempour, J., &
-            Pinson, P. (2024). <i>Bayesian Regression Markets</i>. Journal of Machine Learning
-            Research,
-            25 (180), 1–38.<a></p>
+                <h2>Collaborative Machine Learning</h2>
 
-    <p><a href="https://arxiv.org/abs/2310.06000">Falconer, T., Kazempour, J., & Pinson, P. (2024). <i>Towards
-                Replication-Robust Analytics Markets</i>. arXiv
-            Preprint
-            (Under Review).<a></p>
+                Machine learning assisted optimal power flow (OPF)
+                aims to reduce the computational complexity of these non-linear
+                and non-convex constrained optimization problems by consigning
+                expensive (online) optimization to offline training. The majority of
+                work in this area typically employs fully connected neural networks
+                (FCNN). However, recently convolutional (CNN) and graph (GNN)
+                neural networks have also been investigated, in effort to exploit
+                topological information within the power grid. Although promising
+                results have been obtained, there lacks a systematic comparison
+                between these architectures throughout literature. Accordingly,
+                we introduce a concise framework for generalizing methods for
+                machine learning assisted OPF and assess the performance of a
+                variety of FCNN, CNN and GNN models for two fundamental
+                approaches in this domain: regression (predicting optimal generator set-points) and classification
+                (predicting the active set of
+                constraints). For several synthetic power grids with interconnected
+                utilities, we show that locality properties between feature and target
+                variables are scarce and subsequently demonstrate marginal utility
+                of applying CNN and GNN architectures compared to FCNN for a
+                fixed grid topology. However, with variable topology (for instance,
+                modeling transmission line contingency), GNN models are able to
+                straightforwardly take the change of topological information into
+                account and outperform both FCNN and CNN models.
 
-    <h2>Machine Learning for Power Systems Operations</h2>
+                <h3>Article(s)</h3>
 
-    <h3>Article(s)</h3>
+                <p><a href="https://www.jmlr.org/papers/v25/23-1385.html">Falconer, T., Kazempour, J., &
+                        Pinson, P. (2024). <i>Bayesian Regression Markets</i>. Journal of Machine Learning
+                        Research,
+                        25 (180), 1–38.<a></p>
 
-    <p><a href="https://ieeexplore.ieee.org/abstract/document/9810496">Falconer, T. & and Mones, L. (2023).
-            <i>Leveraging Power Grid Topology
-                in Machine Learning Assisted Optimal Power
-                Flow</i>. IEEE
-            Transactions on Power Systems, 38 (3), 2234-2246.<a></p>
+                <p><a href="https://arxiv.org/abs/2310.06000">Falconer, T., Kazempour, J., & Pinson, P. (2024).
+                        <i>Towards
+                            Replication-Robust Analytics Markets</i>. arXiv
+                        Preprint
+                        (Under Review).<a></p>
+
+                <h2>Machine Learning for Power Systems Operations</h2>
+
+                Machine learning assisted optimal power flow (OPF)
+                aims to reduce the computational complexity of these non-linear
+                and non-convex constrained optimization problems by consigning
+                expensive (online) optimization to offline training. The majority of
+                work in this area typically employs fully connected neural networks
+                (FCNN). However, recently convolutional (CNN) and graph (GNN)
+                neural networks have also been investigated, in effort to exploit
+                topological information within the power grid. Although promising
+                results have been obtained, there lacks a systematic comparison
+                between these architectures throughout literature. Accordingly,
+                we introduce a concise framework for generalizing methods for
+                machine learning assisted OPF and assess the performance of a
+                variety of FCNN, CNN and GNN models for two fundamental
+                approaches in this domain: regression (predicting optimal generator set-points) and classification
+                (predicting the active set of
+                constraints). For several synthetic power grids with interconnected
+                utilities, we show that locality properties between feature and target
+                variables are scarce and subsequently demonstrate marginal utility
+                of applying CNN and GNN architectures compared to FCNN for a
+                fixed grid topology. However, with variable topology (for instance,
+                modeling transmission line contingency), GNN models are able to
+                straightforwardly take the change of topological information into
+                account and outperform both FCNN and CNN models.
+
+                <h3>Article(s)</h3>
+
+                <p><a href="https://ieeexplore.ieee.org/abstract/document/9810496">Falconer, T. & and Mones, L. (2023).
+                        <i>Leveraging Power Grid Topology
+                            in Machine Learning Assisted Optimal Power
+                            Flow</i>. IEEE
+                        Transactions on Power Systems, 38 (3), 2234-2246.<a></p>
+
+
+            </td>
+        </tr>
+    </table>
+
+
+
 
 
 </body>
