--- a/index.html
+++ b/index.html
@@ -8,15 +8,25 @@
 </head>
 
 <body>
-    <div id="common-content"></div>
+    <div id="about-content"></div>
 
     <script>
-        fetch('common.html')
+        fetch('./content/about.html')
             .then(response => response.text())
             .then(data => {
-                document.getElementById('common-content').innerHTML = data;
+                document.getElementById('about-content').innerHTML = data;
             });
     </script>
+
+    <div id="timeline-content"></div>
+    <script>
+        fetch('./content/timeline.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('timeline-content').innerHTML = data;
+            });
+    </script>
+
 
 
 </body>
