Refactor blog layout

--- a/content/about.html
+++ b/content/about.html
@@ -110,7 +110,7 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
         style="margin-left: 20px;margin-right: 20px;"></p>
 <h2>Thomas Falconer</h2>
 <p><a class="nav-link" href="/research/">Research</a>
-<a class="nav-link" href="/writing/">Writing</a>
+<a class="nav-link" href="/blog/">Blog</a>
 <a class="nav-link" href="/assets/pdf/resume.pdf">Resume</a></p>
 <p><a href="https://www.linkedin.com/in/thomas-falconer"><img src="/assets/img/logos/linkedin.svg" width="30"></a>
 <a href="https://scholar.google.com/citations?user=LQgjWm0AAAAJ"><img src="/assets/img/logos/scholar.svg" width="30"></a>
