--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href='/css/blog.css' rel='stylesheet' />
+    <link href='/css/common.css' rel='stylesheet' />
+    <link href='/css/about.css' rel='stylesheet' />
+    {% include favicon.html %}
 </head>
 
 <body>
