--- a/research/index.html
+++ b/research/index.html
@@ -7,15 +7,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='/css/blog.css' rel='stylesheet' />
+    <link href='/css/common.css' rel='stylesheet' />
+    <link href='/css/research.css' rel='stylesheet' />
+    {% include favicon.html %}
+    <style>
+        h2 {
+            margin-top: 90px;
+            margin-bottom: 40px;
+            color: #333;
+        }
+    </style>
 </head>
 
 <body>
-
     {% include nav.html %}
-
     <div id="research-content" class="wrap"></div>
-
     <script>
         fetch('/content/research.html')
             .then(response => response.text())
@@ -23,7 +29,6 @@
                 document.getElementById('research-content').innerHTML = data;
             });
     </script>
-
 </body>
 
 </html>
