--- a/research/index.html
+++ b/research/index.html
@@ -24,8 +24,10 @@
     <div id="research-content" class="wrap"></div>
     <script>
         fetch('/content/research.html')
-            .then(response => response.text())
-            .then(data => {
+            .then(function (response) {
+                return response.text();
+            })
+            .then(function (data) {
                 document.getElementById('research-content').innerHTML = data;
             });
     </script>
