--- a/content/research.html
+++ b/content/research.html
@@ -6,7 +6,9 @@
     </head>
     <body><h2>Publications</h2>
 <p><strong>Mechanism Design for Trading Information</strong></p>
-<p>Falconer, T., Kazempour, J., &amp; Pinson, P. (2025). <em>Trading Information in Games</em>. (Work in progress).</p>
+<p>Falconer, T., Ratha, A., Kamgarpour, M., Kazempour, J., &amp; Pinson, P. (2025). <em>Selling Data to a Rival Firm</em>. (Work in progress).
+<a class="nav-link" href="">Link</a>
+<a class="nav-link" href="https://github.com/tdfalc/trading-information">Code</a></p>
 <p><strong>Collaborative Machine Learning</strong></p>
 <p>Falconer, T., Kazempour, J., &amp; Pinson, P. (2024). <em>Bayesian Regression Markets</em>. Journal of Machine Learning Research, 25 (180), 1–38.
 <a class="nav-link" href="https://www.jmlr.org/papers/v25/23-1385.html">Link</a>
