--- a/content/research.html
+++ b/content/research.html
@@ -1,24 +1,35 @@
+<!DOCTYPE html>
+<html>
 
-    <!DOCTYPE html>
-    <html>
-    <head>
-      
-    </head>
-    <body><h2>Publications</h2>
-<p><strong>Mechanism Design for Trading Information</strong></p>
-<p>Falconer, T., Ratha, A., Kamgarpour, M., Kazempour, J., &amp; Pinson, P. (2025). <em>Selling Data to a Rival Firm</em>. (Work in progress).
-<a class="nav-link" href="">Link</a>
-<a class="nav-link" href="https://github.com/tdfalc/trading-information">Code</a></p>
-<p><strong>Collaborative Machine Learning</strong></p>
-<p>Falconer, T., Kazempour, J., &amp; Pinson, P. (2024). <em>Bayesian Regression Markets</em>. Journal of Machine Learning Research, 25 (180), 1–38.
-<a class="nav-link" href="https://www.jmlr.org/papers/v25/23-1385.html">Link</a>
-<a class="nav-link" href="https://github.com/tdfalc/regression-markets">Code</a></p>
-<p>Falconer, T., Kazempour, J., &amp; Pinson, P. (2024). <em>Towards Replication-Robust Analytics Markets</em>. Preprint (Under Review).
-<a class="nav-link" href="https://arxiv.org/abs/2310.06000">Link</a>
-<a class="nav-link" href="https://github.com/tdfalc/regression-markets">Code</a></p>
-<p><strong>Machine Learning for Power Systems Operations</strong></p>
-<p>Falconer, T. &amp;  Mones, L. (2023). <em>Leveraging Power Grid Topology in Machine Learning Assisted Optimal Power Flow</em>. IEEE Transactions on Power Systems, 38 (3), 2234-2246.
-<a class="nav-link" href="https://ieeexplore.ieee.org/abstract/document/9810496">Link</a>
-<a class="nav-link" href="https://github.com/tdfalc/MLOPF.jl">Code</a></p></body>
-    </html>
-    
+<head>
+
+</head>
+
+<body>
+    <h2>Publications</h2>
+    <p><strong>Mechanism Design for Trading Information</strong></p>
+    <p>Falconer, T., Ratha, A., Kamgarpour, M., Kazempour, J., &amp; Pinson, P. (2025). <em>Selling Data to a Rival
+            Firm</em>. (Work in progress).
+        <a class="nav-link" href="">Link</a>
+        <a class="nav-link" href="https://github.com/tdfalc/trading-information">Code</a>
+    </p>
+    <p><strong>Collaborative Machine Learning</strong></p>
+    <p>Falconer, T., Kazempour, J., &amp; Pinson, P. (2024). <em>Bayesian Regression Markets</em>. Journal of Machine
+        Learning Research, 25 (180), 1–38.
+        <a class="nav-link" href="https://www.jmlr.org/papers/v25/23-1385.html">Link</a>
+        <a class="nav-link" href="https://github.com/tdfalc/regression-markets">Code</a>
+    </p>
+    <p>Falconer, T., Kazempour, J., &amp; Pinson, P. (2024). <em>Towards Replication-Robust Analytics Markets</em>.
+        Preprint (Under Review).
+        <a class="nav-link" href="https://arxiv.org/abs/2310.06000">Link</a>
+        <a class="nav-link" href="https://github.com/tdfalc/regression-markets">Code</a>
+    </p>
+    <p><strong>Machine Learning for Power Systems Operations</strong></p>
+    <p>Falconer, T. &amp; Mones, L. (2023). <em>Leveraging Power Grid Topology in Machine Learning Assisted Optimal
+            Power Flow</em>. IEEE Transactions on Power Systems, 38 (3), 2234-2246.
+        <a class="nav-link" href="https://ieeexplore.ieee.org/abstract/document/9810496">Link</a>
+        <a class="nav-link" href="https://github.com/tdfalc/MLOPF.jl">Code</a>
+    </p>
+</body>
+
+</html>
