Update research [ci skip]

--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
----
----
-<!DOCTYPE html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='/css/common.css' rel='stylesheet' />
-    <link href='/css/about.css' rel='stylesheet' />
-    {% include favicon.html %}
-</head>
-
-<body>
-    <div id="about-content" class="wrap"></div>
-    <script>
-        fetch('/content/about.html')
-            .then(function (response) {
-                return response.text();
-            })
-            .then(function (data) {
-                document.getElementById('about-content').innerHTML = data;
-            });
-    </script>
-
-</body>
-
-</html>
+<!DOCTYPE html> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link href='/css/common.css' rel='stylesheet'/> <link href='/css/about.css' rel='stylesheet'/> <link rel="icon" href="/assets/img/network.png" type="image/x-icon"> <link rel="shortcut icon" href="/assets/img/network.png" type="image/x-icon"> </head> <body> <div id="about-content" class="wrap"></div> <script>fetch("/content/about.html").then(function(t){return t.text()}).then(function(t){document.getElementById("about-content").innerHTML=t});</script> </body> </html>
