--- a/research/index.html
+++ b/research/index.html
@@ -1,36 +1,1 @@
----
----
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='/css/common.css' rel='stylesheet' />
-    <link href='/css/research.css' rel='stylesheet' />
-    {% include favicon.html %}
-    <style>
-        h2 {
-            margin-top: 90px;
-            margin-bottom: 40px;
-            color: #333;
-        }
-    </style>
-</head>
-
-<body>
-    {% include nav.html %}
-    <div id="research-content" class="wrap"></div>
-    <script>
-        fetch('/content/research.html')
-            .then(function (response) {
-                return response.text();
-            })
-            .then(function (data) {
-                document.getElementById('research-content').innerHTML = data;
-            });
-    </script>
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link href='/css/common.css' rel='stylesheet'/> <link href='/css/research.css' rel='stylesheet'/> <link rel="icon" href="/assets/img/network.png" type="image/x-icon"> <link rel="shortcut icon" href="/assets/img/network.png" type="image/x-icon"> <style>h2{margin-top:90px;margin-bottom:40px;color:#333}</style> </head> <body> <div class="nav"> <ul class="wrap"> <li><a href="/">Home</a></li> <li><a href="/research/">Research</a></li> <li><a href="/blog">Blog</a></li> <li><a href="/resume/">Resume</a></li> </ul> </div> <div id="research-content" class="wrap"></div> <script>fetch("/content/research.html").then(function(e){return e.text()}).then(function(e){document.getElementById("research-content").innerHTML=e});</script> </body> </html>
