--- a/resume/index.html
+++ b/resume/index.html
@@ -1,22 +1,1 @@
----
----
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='/css/common.css' rel='stylesheet' />
-    {% include favicon.html %}
-</head>
-
-<body>
-    {% include nav.html %}
-    <iframe src="{{ '/assets/pdf/resume.pdf' | relative_url }}" width="100%" height="800px">
-        This browser does not support PDFs. Please download the PDF to view it: <a
-            href="{{ '/assets/pdf/resume.pdf' | relative_url }}">Download PDF</a>.
-    </iframe>
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link href='/css/common.css' rel='stylesheet'/> <link rel="icon" href="/assets/img/network.png" type="image/x-icon"> <link rel="shortcut icon" href="/assets/img/network.png" type="image/x-icon"> </head> <body> <div class="nav"> <ul class="wrap"> <li><a href="/">Home</a></li> <li><a href="/research/">Research</a></li> <li><a href="/blog">Blog</a></li> <li><a href="/resume/">Resume</a></li> </ul> </div> <iframe src="/assets/pdf/resume.pdf" width="100%" height="800px"> This browser does not support PDFs. Please download the PDF to view it: <a href="/assets/pdf/resume.pdf">Download PDF</a>. </iframe> </body> </html>
